# Husky-Panel

./: .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  README.zh.md
.cache/clangd/index/: absl_vlog_is_on.h.D8CC3EB5718A9A59.idx  abstractwindowcontext.cpp.6AC2FC06E4DA2C00.idx  abstractwindowcontext_p.h.BCC87077D9FB3D21.idx  address_is_readable.cc.AA9F385DFA8CD92E.idx  address_is_readable.h.326F1533809C2CFC.idx  addresses.h.C70521BADD234670.idx  algorithm.h.2CD112851C5F27F8.idx  any_invocable.h.5E84513A63116205.idx  any_invocable.h.967C68AC88FD1EB9.idx  app_drawer.cc.CA2B156D3FF8E246.idx  app_drawer.h.6F8488E4366BBB40.idx  app_drawer_btn.cc.A52759EFC4B37E8C.idx  app_drawer_btn.h.54148DB80A7ACEC7.idx  app_drawer_item.cc.793A711B0899C5F3.idx  app_drawer_item.h.A2E9AD6FDE94CCD2.idx  app_drawer_side_pane_item.cc.D2BE70D223B2A951.idx  app_drawer_side_pane_item.h.C2E6586831671AF5.idx  app_drawer_style.h.93D0EE503854986E.idx  app_indicator.cc.A23FBC20677866E5.idx  app_indicator.h.F0400534268B64B2.idx  app_indicator_style.h.324E9C5EA763A7F2.idx  append_and_overwrite.h.2A9667CF2467F7F4.idx  append_truncated.h.FA0A73A10D0714DE.idx  application_info.cc.38470432212CAA77.idx  application_info.h.9B125EF11D221ED9.idx  application_services.cc.88A6A2D7968FEDC9.idx  application_services.h.3BC50A5D3A20B47D.idx  arg.cc.A1075BF733FC1C30.idx  arg.h.A0DF3B68764C3D5E.idx  ascii.cc.CF40C73BF7515AF8.idx  ascii.h.6D33DA37058D4235.idx  atomic_hook.h.392175E2D8A841AD.idx  attributes.h.6A2382B9A9BDDB27.idx  barrier.cc.0BFCE1BFEBAADBB5.idx  barrier.h.6B85475675B5CA35.idx  battery_indicator.cc.6407666BC4B940BA.idx  battery_indicator.h.821DEB9A7B5A0E7A.idx  battery_info.cc.D3B29D32AD81C007.idx  battery_info.h.0EA69BFAE4BB941A.idx  bernoulli_distribution.h.602DCA3E332BD895.idx  (+670 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-arch-pkg.yml  build-deb.yml  build-rpm.yml
.qtcreator/: CMakeLists.txt.user.1b3981b
ci_build/: README.md
cmake/: README.md
cmake/libdbusmenu/: CMakeLists.txt  PatchDbusmenuStatic.cmake
cmake/material-color-utils/: CMakeLists.txt
docs/build_instructions/: Arch.en.md  Arch.zh.md  Debian.en.md  Debian.zh.md  Fedora.en.md  Fedora.zh.md  GXDE_Post_Install.en.md  GXDE_Post_Install.zh.md
docs/doxygen/html/: annotated.html  annotated_dup.js  app__indicator_8h_source.html  app__info__wrapper_8h_source.html  app__launcher_8h_source.html  application__info_8h_source.html  application__services_8h_source.html  battery__indicator_8h_source.html  battery__info_8h_source.html  bluetooth__handler_8h_source.html  bluetooth__info_8h_source.html  calendar_8h_source.html  calendar__style_8h_source.html  classes.html  classpanel_1_1backend_1_1ApplicationInfo-members.html  classpanel_1_1backend_1_1ApplicationInfo.html  classpanel_1_1backend_1_1ApplicationServices-members.html  classpanel_1_1backend_1_1ApplicationServices.html  classpanel_1_1backend_1_1BatteryInfo-members.html  classpanel_1_1backend_1_1BatteryInfo.html  classpanel_1_1backend_1_1BluetoothInfo-members.html  classpanel_1_1backend_1_1BluetoothInfo.html  classpanel_1_1backend_1_1BluetoothInfo.js  classpanel_1_1backend_1_1Clock-members.html  classpanel_1_1backend_1_1Clock.html  classpanel_1_1backend_1_1CurrentWindowKwinImpl-members.html  classpanel_1_1backend_1_1CurrentWindowKwinImpl.html  classpanel_1_1backend_1_1CurrentWindowNullImpl-members.html  classpanel_1_1backend_1_1CurrentWindowNullImpl.html  classpanel_1_1backend_1_1CurrentWindowProvider-members.html  classpanel_1_1backend_1_1CurrentWindowProvider.html  classpanel_1_1backend_1_1CurrentWindowWlrootsImpl-members.html  classpanel_1_1backend_1_1CurrentWindowWlrootsImpl.html  classpanel_1_1backend_1_1CurrentWindowWlrootsImpl.js  classpanel_1_1backend_1_1CurrentWindowXorgImpl-members.html  classpanel_1_1backend_1_1CurrentWindowXorgImpl.html  classpanel_1_1backend_1_1CurrentWindowXorgImpl.js  classpanel_1_1backend_1_1PowerOptions-members.html  classpanel_1_1backend_1_1PowerOptions.html  classpanel_1_1backend_1_1SessionHandler-members.html  (+217 more)
docs/doxygen/latex/: annotated.tex  app__indicator_8h_source.tex  app__info__wrapper_8h_source.tex  app__launcher_8h_source.tex  application__info_8h_source.tex  application__services_8h_source.tex  battery__indicator_8h_source.tex  battery__info_8h_source.tex  bluetooth__handler_8h_source.tex  bluetooth__info_8h_source.tex  calendar_8h_source.tex  calendar__style_8h_source.tex  classpanel_1_1backend_1_1ApplicationInfo.tex  classpanel_1_1backend_1_1ApplicationServices.tex  classpanel_1_1backend_1_1BatteryInfo.eps  classpanel_1_1backend_1_1BatteryInfo.tex  classpanel_1_1backend_1_1BluetoothInfo.eps  classpanel_1_1backend_1_1BluetoothInfo.tex  classpanel_1_1backend_1_1Clock.eps  (+123 more)
docs/working/: freebsd.md
locales/: HuskyPanel_zh_CN.ts
plugins/: README.md
plugins/kde/: README.md
private/: Volume Control.md
protocols/: wlr-foreign-toplevel-management-unstable-v1.xml
res/: resources.qrc
res/HuskyPanel/: Theme.qmltypes  qmldir
res/interfaces/: AppIndicator.qml  MainWindow.qml
res/translations/: HuskyPanel_zh_CN.qm  app_drawer.locale  bar.locale  battery_control.locale  bluetooth.locale  calendar.locale  config_panel.locale  volume_control.locale  wlan_control.locale
scripts/: build_deb.sh  build_rpm.sh  build_zstd.sh  configure_ecm.sh
src/: main.cc
src/application_services/: application_services.cc  application_services.h
src/battery_info/: battery_info.cc
src/clock/: clock.cc  clock.h
src/components/: ROADMAP.md
src/depreciated/: README.md
src/font_loader/: font_loader.cc  font_loader.h
src/info_server/: ROADMAP.md
src/mainwindow/: mainwindow.cc  mainwindow.h  mainwindow.ui
src/quick_kde_su/: quick_kde_su.h
src/theme_loader/: quick_theme_provider.cc  quick_theme_provider.h  theme_conf.h  theme_loader.cc  theme_loader.h
src/translation_loader/: translation_loader.cc  translation_loader.h
src/user_info/: user_info.cc  user_info.h
src/utils/: dbus_def.h  utils.cc  utils.h
src/wlan_info/: wlan_info.cc  wlan_info.h
(+238 files in other folders)
